<resources>
    <string name="app_name">NetumApp</string>

    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="select_operation_type">选择操作类型</string>
    <string name="characteristic">特性</string>
    <string name="data_changed">的数据变化：</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>
    <string name="debugTitle">扫描记录</string>
    <string name="debugCount">接收计数:</string>
    <string name="valueCanNotEmpty">设置值不能为空</string>
    <string name="softTriggerRange">设置值范围必须介于1和7之间</string>
    <string name="customBeepLevelRange">设置值范围必须介于0和26之间</string>
    <string name="customBeepTimeRange">蜂鸣时间设置范围必须在10到2540 ms之间</string>
    <string name="customBeepTypeRange">蜂鸣类型设置范围必须介于0和2之间</string>
    <string name="customBeepFrequencyRange">蜂鸣频率设置范围必须在100和5200 赫兹之间</string>
    <string name="selectScanner">请选择扫描枪</string>
    <string name="unconnectedScanner">暂无处于连接状态的扫描枪</string>
    <string name="softwareTriggered">软件触发扫描</string>
    <string name="soundVibrationControl">声音震动控制</string>
    <string name="timestampFunction">时间戳功能</string>
    <string name="scan">扫描</string>
    <string name="send">发送</string>
    <string name="setTime">设置时间</string>

</resources>
